# Projekt_kontrola_lot

./: .gitignore  CMakeLists.txt  CMakePresets.json
inc/: libs.h  mem_alloc.h  plane.h  plane_operations.h
include/: libs.h
src/: compare_string.c  main.c  planes.c
